--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-j3h3fh
-fkjfk
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url='https://ipfs.fleek.co/ipfs/QmVmUdJpuAtU21ENRTidXfxc9zdh3cmzyzEmpaeHp4eGLE/'" />
+  </head>
+  <body>
+    
+  </body>
+</html>
