--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://ipfs.fleek.co/ipfs/QmVmUdJpuAtU21ENRTidXfxc9zdh3cmzyzEmpaeHp4eGLE/'" />
+    <meta http-equiv="refresh" content="0; url='https://fleek.ipfs.io/ipfs/QmVmUdJpuAtU21ENRTidXfxc9zdh3cmzyzEmpaeHp4eGLE/'" />
   </head>
   <body>
     
